2022-03-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-osm): new function.

	* eev-hlinks.el (ee-fhl-main-program): added support for osm.
	(ee-osm-bufferp): new function.

	* eev-tlinks.el (find-osm-links, ee-find-osm-links, ee-osm-lat)
	(ee-osm-lon, ee-osm-zoom): new functions.

2022-03-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-template0.el (ee-template0-lex, ee-template00-lex)
	(ee-template000-lex): new functions.

2022-03-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (eev-version): new function.

2022-03-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el: rewritten almost completely.

2022-03-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-quick-intro): rewrote the section "10.2.
	Generating short hyperlinks to info nodes" following some ideas
	by Bruno Macedo (thanks!=)).

2022-02-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-code-pdfbackend): make the functions of the
	form `find-xxxpage' interactive.
	(ee-code-pdftextbackend): make the functions of the form
	`find-xxxtext' interactive.

	* eev-elinks.el (find-emenubar-links): new function.

2022-02-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-0x0-upload): rewritten.

2022-02-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el: new file.

	* eev-load.el (eev-kla): load "eev-kla.el".

	* .dir-locals.el: new file.

	* eev-edit.el (ee-copy-preceding-tag-to-kill-ring): return str.

2022-02-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (code-youtubevideo, find-code-youtubevideo)
	(ee-code-youtubevideo): new functions.

	* eev-tlinks.el (find-youtubedl-links): use `code-youtubevideo'.

2022-02-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-1stclassvideodef): new function.

2022-02-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-1stclassvideoindex): new function.
	(ee-find-1stclassvideo-links): use `find-1stclassvideoindex'.
